fixes css misalignment, minor fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,75 +1,60 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    max-width: 1000px;
+    margin: 160px auto;
+    text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+input {
+    width: 1000px;
+    height: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+
+    padding: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+thead {
+    font-weight: bold;
+    font-size: x-large;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+th {
+    width: 33%;
+    text-align: center;
+    padding: 8px;
 }
 
-.card {
-  padding: 2em;
+table {
+    width: 100%;
+    height: auto;
+    border-color: #1a1a1a;
+    border-style: solid;
+    border-collapse: collapse;
+    table-layout: fixed;
+    padding: 20px;
 }
 
-.read-the-docs {
-  color: #888;
+table caption {
+    font-size: xx-large;
+    font-weight: bold;
 }
 
-input, h2 {
-  width: 1000px;
-}
-thead{
-  display:flex;
-  justify-content: space-evenly;
-  width: 1000px;
+td {
+    text-align: center;
 }
 
-tr{
-  display:flex;
-  align-content: space-evenly;
-  justify-content: space-evenly;
-}
-td{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+#card {
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
 
-#card{
-  display: flex;
-  flex-direction: column;
+#card-buttons {
+    display: flex;
+    justify-content: center;
 }
 
-#card-buttons{
-  display: flex;
-}
-
-#edit-card, #edit-input{
-  width: 100px;
+#edit-card, #edit-input {
+    width: 100px;
 }
